--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-cite"]
 	path = themes/hugo-cite
 	url = https://github.com/loup-brun/hugo-cite.git
+[submodule "themes/themes/hugo-cite"]
+	path = themes/themes/hugo-cite
+	url = https://github.com/loup-brun/hugo-cite.git
