rename deploy folder

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,5 +9,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: './your-folder' # The folder you want to deploy
+          path: './public' # The folder you want to deploy
       - uses: actions/deploy-pages@v4
