changes the default theme

--- a/hugo.yml
+++ b/hugo.yml
@@ -97,7 +97,7 @@ params:
   author: ["Max Liang"]
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
-  defaultTheme: dark # dark, light
+  defaultTheme: light # dark, light
   disableThemeToggle: false
 
   assets:
